--- a/views/customer_operated_list.html
+++ b/views/customer_operated_list.html
@@ -53,7 +53,7 @@
               <th>#</th>
               <th>ユーザID</th>
               <th>ユーザ名</th>
-              <th>ディバイスコード</th>
+              <th>デバイスコード</th>
               <th>アプリ名</th>
               <th>使用時間（ｈ）</th>
             </tr>
