--- a/views/customer_operated_list.html
+++ b/views/customer_operated_list.html
@@ -7,7 +7,19 @@
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
 
   <!--<script type="text/javascript" src="/javascripts/admin_operated_list.js"></script>-->
+  <script>
+    $(function () {
+      $("#showLayout").bind("click", function(e){
+        $("#layout").show();
+        $("#synthetic").hide();
+      });
 
+      $("#showSynthetic").bind("click", function(e){
+        $("#layout").hide();
+        $("#synthetic").show();
+      });
+    });
+  </script>
 </head>
 <body>
 
@@ -34,6 +46,13 @@
 
     <div class="page-content">
       <div class="row tableheader">
+
+        <div class="pull-right btn-group">
+          <button type="button" class="btn btn-default" id="showSynthetic"><i class="icon-unlink"></i></button>
+          <button type="button" class="btn btn-default" id="showLayout"><i class="icon-th"></i></button>
+
+        </div>
+
         <div class="pull-right" style="width: 300px">
           <form class="search-form">
             <div class="input-group">
@@ -44,31 +63,145 @@
             </div>
           </form>
         </div>
+
       </div>
-      <div class="row">
+      <div id="layout" class="row" style="display:none">
         <div class="col-lg-12">
           <table class="table table-hover">
             <thead>
             <tr>
               <th>#</th>
-              <th>ユーザID</th>
-              <th>ユーザ名</th>
-              <th>デバイスコード</th>
-              <th>アプリ名</th>
-              <th>使用時間（ｈ）</th>
+              <th>レイアウト名</th>
+              <th>レイアウト作成者</th>
+              <th>レイアウト更新日</th>
+              <th>ネタ数</th>
+              <th>使用しているユーザ数</th>
             </tr>
             </thead>
-            <tbody id="companyinfo_list"></tbody>
-            <% for(i=1;i<=15;i++) { %>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>新人営業マン向け</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>15</td>
+                <td>30</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>DreamArts 西日本営業向け</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>10</td>
+                <td>20</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>DreamArts 東京営業向け</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>20</td>
+                <td>10</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>沖縄営業マン向け</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>10</td>
+                <td>20</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>大連営業マン向け</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>15</td>
+                <td>3</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div id="synthetic" class="row" >
+        <div class="col-lg-12">
+          <table class="table table-hover">
+            <thead>
             <tr>
-              <td><%=i %></td>
-              <td>user01@dreamarts.co.jp</td>
-              <td>ユーザ０１</td>
-              <td>0E129E3F3E20200</td>
-              <td>ゆかり</td>
-              <td>30</td>
+              <th>#</th>
+              <th>ネタ名</th>
+              <th>ネタ作成者</th>
+              <th>ネタ更新日</th>
+              <th>ネタタイプ</th>
+              <th>ページ数</th>
+              <th>使用されるレイアウト数</th>
             </tr>
-            <% } %>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>INSUITE紹介</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>画像セット</td>
+                <td>3</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Ｙｉマネジメントサービス</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>画像セット</td>
+                <td>2</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Shopらん紹介</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>画像セット</td>
+                <td>2</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Sm@rtDB紹介</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>画像セット</td>
+                <td>3</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>会社紹介</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>アニメーション画像</td>
+                <td>8</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>事例（全日空）</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>ケースビュー</td>
+                <td>3</td>
+                <td>10</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>カタログギャラリー</td>
+                <td>ユーザ０１</td>
+                <td>2013/09/24</td>
+                <td>ギャラリー</td>
+                <td>15</td>
+                <td>10</td>
+              </tr>
+            </tbody>
           </table>
         </div>
       </div>
