--- a/views/customer_operated_list.html
+++ b/views/customer_operated_list.html
@@ -76,6 +76,7 @@
               <th>レイアウト更新日</th>
               <th>ネタ数</th>
               <th>使用しているユーザ数</th>
+              <th>参照回数</th>
             </tr>
             </thead>
             <tbody>
@@ -86,6 +87,7 @@
                 <td>2013/09/24</td>
                 <td>15</td>
                 <td>30</td>
+                <td>300</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -94,6 +96,7 @@
                 <td>2013/09/24</td>
                 <td>10</td>
                 <td>20</td>
+                <td>52</td>
               </tr>
               <tr>
                 <td>3</td>
@@ -102,6 +105,7 @@
                 <td>2013/09/24</td>
                 <td>20</td>
                 <td>10</td>
+                <td>90</td>
               </tr>
               <tr>
                 <td>4</td>
@@ -110,6 +114,7 @@
                 <td>2013/09/24</td>
                 <td>10</td>
                 <td>20</td>
+                <td>70</td>
               </tr>
               <tr>
                 <td>5</td>
@@ -118,6 +123,7 @@
                 <td>2013/09/24</td>
                 <td>15</td>
                 <td>3</td>
+                <td>20</td>
               </tr>
             </tbody>
           </table>
@@ -135,6 +141,7 @@
               <th>ネタタイプ</th>
               <th>ページ数</th>
               <th>使用されるレイアウト数</th>
+              <th>参照回数</th>
             </tr>
             </thead>
             <tbody>
@@ -146,6 +153,7 @@
                 <td>画像セット</td>
                 <td>3</td>
                 <td>1</td>
+                <td>11</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -155,6 +163,7 @@
                 <td>画像セット</td>
                 <td>2</td>
                 <td>1</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>3</td>
@@ -164,6 +173,7 @@
                 <td>画像セット</td>
                 <td>2</td>
                 <td>1</td>
+                <td>8</td>
               </tr>
               <tr>
                 <td>4</td>
@@ -173,6 +183,7 @@
                 <td>画像セット</td>
                 <td>3</td>
                 <td>1</td>
+                <td>30</td>
               </tr>
               <tr>
                 <td>5</td>
@@ -182,6 +193,7 @@
                 <td>アニメーション画像</td>
                 <td>8</td>
                 <td>3</td>
+                <td>40</td>
               </tr>
               <tr>
                 <td>6</td>
@@ -191,6 +203,7 @@
                 <td>ケースビュー</td>
                 <td>3</td>
                 <td>10</td>
+                <td>40</td>
               </tr>
               <tr>
                 <td>7</td>
@@ -200,6 +213,7 @@
                 <td>ギャラリー</td>
                 <td>15</td>
                 <td>10</td>
+                <td>20</td>
               </tr>
             </tbody>
           </table>
