--- a/views/customer_workstation.html
+++ b/views/customer_workstation.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="row box-border">
-        <div class="wsbackcolor" style="width:760px;margin-left:15px;">
+        <div class="wsbackcolor" style="width:770px;margin-left:15px;">
           <div>
             <ul style="border-bottom-color:#DCDCDC;border:1px;">
               <div class="row">
@@ -175,7 +175,7 @@
       <div class="wsoper pull-left">
         <i class="icon-move"></i>
       </div>
-      <div class="pull-left">
+      <div class="pull-left" style="width:20px">
         <i class="icon-trash" style="padding:5px;" tabindex="{{sort}}" wsid={{wsid}} operation="delete"></i>
       </div>
     </li>
