--- a/views/customer_workstation.html
+++ b/views/customer_workstation.html
@@ -153,7 +153,7 @@
 </script>
 
 <script type="text/template" id="tmpl_sortable">
-  <div class="row"></div>
+  <div class="row">
     <li class="ui-state-default" wsid={{wsid}}>
       <div class="wsicon pull-left">
         <ul>
