布局公开期间追加

--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -6,6 +6,15 @@
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
   <script type="text/javascript" src="/javascripts/content_layout_list.js"></script>
   <script type="text/javascript" src="/javascripts/common.user.view.js"></script>
+  <link href="/vendor/datepicker/css/bootstrap-daterangepicker.css" rel="stylesheet" media="screen">
+
+  <script type="text/javascript" src="/vendor/datepicker/js/bootstrap-datetimepicker.js"></script>
+  <script>
+    $(function () {
+      $(".datetimepicker").datetimepicker();
+      $(".datetimepicker1").datetimepicker();
+    });
+  </script>
 </head>
 <body>
 
@@ -105,6 +114,24 @@
                 <div id="textBoxViewer" class="incrementBox">
                   <input id="viewerText" scope="1" placeholder="<%= i('html.input.layout.viewer') %>" />
                 </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="datetimepicker" class="col-lg-3 control-label">公開期間FROM<!-- 公開先 --></label>
+              <div class='col-lg-7 datetimepicker input-group' id='datetimepicker'>
+                <input class='form-control' data-format='MM/dd/yyyy HH:mm:ss PP' placeholder='公開期間FROM' type='text'>
+                <span class='input-group-addon'>
+                <span data-date-icon='icon-calendar' data-time-icon='icon-time'></span>
+              </span>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="datetimepicker1" class="col-lg-3 control-label">公開期間TO<!-- 公開先 --></label>
+              <div class='col-lg-7 datetimepicker input-group' id='datetimepicker1'>
+                <input class='form-control' data-format='MM/dd/yyyy HH:mm:ss PP' placeholder='公開期間TO' type='text'>
+                <span class='input-group-addon'>
+                <span data-date-icon='icon-calendar' data-time-icon='icon-time'></span>
+              </span>
               </div>
             </div>
           </form>
