--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -59,8 +59,8 @@
             <th><%= i('html.label.company.code') %><!--会社コード --></th>
             <th><%= i('html.label.company.name') %><!--会社名(英語) --></th>
             <th><%= i('html.label.company.kana') %><!--会社名(かな) --></th>
-            <th><%= i('html.label.company.address') %><!--会社住所 --></th>
-            <th><%= i('html.label.company.tel') %><!--電話番号 --></th>
+            <!--<th><%= i('html.label.company.address') %>&lt;!&ndash;会社住所 &ndash;&gt;</th>-->
+            <!--<th><%= i('html.label.company.tel') %>&lt;!&ndash;電話番号 &ndash;&gt;</th>-->
             <th><%= i('html.label.company.adminid') %><!--管理者ID --></th>
             <th><%= i('html.label.company.createat') %><!--登録日 --></th>
             <th><%= i('html.label.company.active') %><!--有効性 --></th>
@@ -95,8 +95,8 @@
   <td>{{code}}</td>
   <td>{{name}}</td>
   <td>{{kana}}</td>
-  <td>{{address}}</td>
-  <td>{{tel}}</td>
+  <!--<td>{{address}}</td>-->
+  <!--<td>{{tel}}</td>-->
   <td>{{mail}}</td>
   <td>{{createat}}</td>
   <$ if (active == 1) {$>
