--- a/views/admin_user_update.html
+++ b/views/admin_user_update.html
@@ -44,9 +44,9 @@
       <div class="row col-lg-8 box-border">
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label for="inputCompanyCode" class="col-lg-2 control-label">顧客コード</label>
+            <label for="inputCompanyCode" class="col-lg-2 control-label"><%= i('html.label.user.select.comppath') %></label>
             <div class="col-lg-8">
-              <input type="text" class="form-control" id="inputCompanyCode" placeholder="顧客コード" maxlength="30" code="" value="">
+              <input type="text" class="form-control" id="inputCompanyCode" placeholder="<%= i('html.label.user.select.comppath') %>" maxlength="30" code="" value="">
             </div>
           </div>
           <div class="form-group">
