fix bug of IE10

--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -71,8 +71,8 @@
   <li class="user">
     <a uid="{{ id }}" uname="{{ name }}" type="{{ type }}">
       <img src="{{ photo }}" />
-      <span>{{ name }}</span>
-      <span class="addition">{{ addition }}</span>
+      <span style="text-align:left;">{{ name }}</span>
+      <span style="text-align:left;" class="addition">{{ addition }}</span>
     </a>
   </li>
 </script>
@@ -89,7 +89,7 @@
 <script type="text/template" id="_tag_list_template">
   <li class="user">
     <a tagname="{{ name }}">
-      <span>{{ name }}</span>
+      <span style="text-align:left;">{{ name }}</span>
     </a>
   </li>
 </script>
