--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -174,7 +174,7 @@
     <td>
       <!--<a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="copy">コピー</a>-->
       <a href="#" class="btn btn-default btn-sm {{class3}}" rowid={{id}} operation="preview" imageH = {{preview_image}} ><%= i('html.button.common.preview') %><!--プレビュー --></a>
-      <a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="delete"><%= i('html.button.common.discard') %><!--廃止 --></a>
+      <a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="repeal"><%= i('html.button.common.discard') %><!--廃止 --></a>
     </td>
   </tr>
 </script>
