--- a/views/customer_appimage.html
+++ b/views/customer_appimage.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div  class="col-lg-6" style="position: relative;">
-          <img id="image1" class="img-rounded splash-size" src="/images/test/img_start01.png">
+          <img id="image1" class="splash-size" src="/images/test/img_start01.png">
           <input type="file" id="uploadfile" style="display: none" accept=".png, .jpg, .jpeg"/>
           <a id="img_first" class="btn btn-default center_btn" style="margin-top: 5px;">
             <span><%= i('html.select.appimage') %><!-- 起動画像追加--></span>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="col-lg-6" style="position: relative;">
-          <img  id="image2" class="img-rounded splash-size" src="/images/test/img_start02.png">
+          <img  id="image2" class="splash-size" src="/images/test/img_start02.png">
           <input type="file" id="uploadfile1" style="display: none" accept=".png, .jpg, .jpeg"/>
           <a id="img_second" class="btn btn-default center_btn" style="margin-top: 5px;">
             <span><%= i('html.select.appimage') %><!-- 起動画像追加--></span>
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col-lg-6" style="position: relative;">
-          <div class="img-rounded header-size" style="overflow: hidden">
+          <div class="header-size" style="overflow: hidden">
             <img id="imagelogo" class="" src="/images/test/logo_header.png" style="background-color: gainsboro">
           </div>
           <input type="file" id="uploadfile2" style="display: none" accept=".png, .jpg, .jpeg"/>
