自作成  的layout  一览

--- a/public/stylesheets/yukari.css
+++ b/public/stylesheets/yukari.css
@@ -1012,3 +1012,10 @@ table {
   word-break: break-all;
   word-wrap: break-word;
 }
+.breadcrumb > li a {
+  width: auto;
+}
+.breadcrumb > li + li:before {
+  padding: 0px;
+  content: "";
+}
