--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -1013,3 +1013,12 @@ table {
   word-break:break-all;
   word-wrap:break-word;
 }
+
+.breadcrumb > li a {
+  width: auto;
+}
+
+.breadcrumb > li + li:before{
+  padding: 0px;
+  content: "";
+}
