--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -83,7 +83,7 @@
               <input type="tel" class="form-control" id="inputTel" placeholder="<%= i('html.label.company.tel') %>" maxlength="30">
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group" id="inputActiveGroup">
             <label class="col-lg-2 control-label"><%= i('html.label.company.active') %><!--有効性 --></label>
             <div class="col-lg-8">
               <div class="btn-group" value="1" id="inputActive">
