modify for IE9 error

--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -127,9 +127,9 @@
                   <input class="form-control daterange" readonly placeholder="<%= i('html.input.layout.range') %>" type='text' id='datepicker' style="font-size: 13px;">
                   <input type="hidden" id="openStart">
                   <input type="hidden" id="openEnd">
-                  <span class='input-group-addon'>
-                    <i class="icon-calendar"></i>
-                  </span>
+                  <!--span class='input-group-addon'>
+                    <i class="icon-calendar" id="date_icon"></i>
+                  </span-->
                 </div>
               </div>
               
