modify for IE9 error

--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -174,7 +174,7 @@
     <td>{{editat}}</td>
     <td>
       <!--<a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="copy">コピー</a>-->
-      <a href="#" class="btn btn-default btn-sm {{class3}}" rowid={{id}} operation="preview" imageH = {{preview_image}} ><%= i('html.button.common.preview') %><!--プレビュー --></a>
+      <a href="#" class="btn btn-default btn-sm {{class3}}" rowid={{id}} operation="preview" imageH = {{preview_image_H}} ><%= i('html.button.common.preview') %><!--プレビュー --></a>
       <a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="repeal"><%= i('html.button.common.discard') %><!--廃止 --></a>
     </td>
   </tr>
@@ -189,7 +189,7 @@
     <td>{{range}}</td>
     <td>{{editat}}</td>
     <td>
-       <a href="#" class="btn btn-default btn-sm {{class3}}" rowid={{id}} operation="preview" imageH = {{preview_image}} ><%= i('html.button.common.preview') %><!--プレビュー --></a>
+       <a href="#" class="btn btn-default btn-sm {{class3}}" rowid={{id}} operation="preview" imageH = {{preview_image_H}} ><%= i('html.button.common.preview') %><!--プレビュー --></a>
     </td>
   </tr>
 </script>
